# winmusic

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  flake.nix  main.rs
.gitea/workflows/: rust.yml
src/: args.rs  commands.rs  config.rs  db.rs  main.rs  types.rs
