[package]
name = "music_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
kdl = "6.3.2"
log = "0.4.25"
poise = "0.6.1"
reqwest = "0.11.27"
songbird = { version = "0.5.0", features = ["driver", "builtin-queue"] }
symphonia = { version = "0.5.4", features = ["all-codecs"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
